--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,50 +1,24 @@
 # Dependencies
-node_modules/
+node_modules
+.pnp
+.pnp.js
 
-# Environment variables
+# Testing
+coverage
+
+# Production
+build
+dist
+
+# Misc
+.DS_Store
 .env
 .env.local
-.env.development
-.env.test
-.env.production
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Logs
-logs/
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# Runtime data
-pids/
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory
-coverage/
-
-# Build output
-dist/
-build/
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# IDE/Editor files
-.idea/
-.vscode/
-*.swp
-*.swo
-*~
-
-# Optional npm cache
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Misc
-*.bak
-*.tmp
